--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "typo3/cms-core": "^10.4",
+    "typo3/cms-core": "^9.5 || ^10.4",
     "zeroseven/z7-blog": "*"
   },
   "autoload": {
