--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
   },
   "replace": {
     "zeroseven/z7-blog-rss": "self.version"
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "z7_blog_rss"
+    }
   }
 }
