Update composer.json and ext_emconf.php to be installable in TYPO3 11

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     }
   ],
   "require": {
-    "typo3/cms-core": "^9.5 || ^10.4",
-    "zeroseven/z7-blog": "^1.0 || ^1.1"
+    "typo3/cms-core": "^9.5 || ^10.4 || ^11.0",
+    "zeroseven/z7-blog": "^1.0 || ^1.1 || dev-feature/compatibility-typo3-11"
   },
   "autoload": {
     "psr-4": {
