--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "typo3/cms-core": "^9.5 || ^10.4 || ^11.0",
-    "zeroseven/z7-blog": "~1.0.0 || ~1.1.0 || ~1.2.0"
+    "zeroseven/z7-blog": "~1.0.0 || ~1.1.0 || ~1.2.0 || ~1.3.0"
   },
   "autoload": {
     "psr-4": {
