Fix invalid composer.json

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "rm .gitattributes",
         "rm .gitignore",
         "rm -rf .github",
-        "rm .gitlab-ci.yml",
+        "rm .gitlab-ci.yml"
       ]
     }
   }
